--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "private": true,
-  "engines": {
-    "node": "14.x"
-  },
+  "license": "MIT",
   "scripts": {
-    "build": "tsc -p web/tsconfig.json"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "chrome-aws-lambda": "7.0.0",
-    "marked": "4.0.10",
-    "puppeteer-core": "13.1.2",
-    "twemoji": "13.0.1"
+    "@vercel/og": "latest",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "@types/marked": "4.0.1",
-    "@types/puppeteer": "5.4.4",
-    "@types/puppeteer-core": "5.4.0",
-    "typescript": "4.1.5"
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
+    "typescript": "^4.7.4"
   }
 }
