--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@lovelliu/eslint-config": "^0.0.9",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
+    "eslint": "^8.32.0",
     "typescript": "^4.7.4"
   }
 }
