--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@lovelliu/eslint-config": "^0.0.9",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.7.4"
   }
 }
