--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@vercel/og": "latest",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-hook-form": "^7.42.1"
   },
   "devDependencies": {
     "@lovelliu/eslint-config": "^0.0.9",
