--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@lovelliu/eslint-config": "^0.0.9",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.13",
